[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bjut-tech"
version = "0.3.0"
description = "The bjut.tech Python package for some common stuff."
readme = "README.md"
dependencies = [
  "beautifulsoup4",
  "dill",
  "environs",
  "httpx",
  "pycryptodome",
  "rsa"
]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]

[project.urls]
homepage = "https://github.com/bjut-tech/py"
